--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
+  flutter:
+    sdk: flutter
   flutter_spinkit: ^5.0.0
   geolocator: ^7.2.0+1
   get: ^4.1.4
@@ -18,18 +18,20 @@ dependencies:
   google_maps_flutter: ^2.0.6
   http: ^0.13.3
   image: ^3.0.2
+  image_picker: ^0.8.3+2
   intl: ^0.17.0
   lint: ^1.5.3
   location_permissions: ^4.0.0
   material_design_icons_flutter: ^5.0.5955-rc.1
+  month_picker_dialog: ^0.4.0
   path_provider: ^2.0.2
   permission_handler: ^8.1.2
+  shared_preferences: ^2.0.6
   supercharged: ^2.0.0
+  syncfusion_flutter_datepicker: ^19.2.55
   timer_builder: ^2.0.0
   trust_location: ^2.0.13
-  month_picker_dialog: ^0.4.0
-  image_picker: ^0.8.3+2
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
