--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   timeline_tile: ^2.0.0
   timer_builder: ^2.0.0
   trust_location: ^2.0.13
+  url_launcher: ^6.0.16
   video_compress: ^3.1.0
   video_player: ^2.1.14
 
